--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smoke",
-  "version": "2.0.4",
+  "version": "2.1.0",
   "description": "Jquery Plugin diseñado para usarse en Bootstrap 3. Validación de formularios, Notificaciones, Alertas, Mensajes de Confirmación, Barra de progreso y Mas.",
   "main": "index.js",
   "scripts": {
@@ -19,8 +19,10 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
+    "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-uglify": "^0.8.0"
+    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-gh-pages": "^0.10.0"
   }
 }
