--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "docs"
   ],
   "dependencies": {
     "jquery": ">= 1.9.1",
