--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smokeDocs",
   "version": "1.0.0",
-  "description": "Documentacion de plugin smoke",
+  "description": "Docs plugin smoke",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
