--- a/package.json
+++ b/package.json
@@ -2,7 +2,29 @@
   "name": "smoke",
   "version": "2.1.3",
   "description": "Smoke es el Plugin Jquery mas completo y ligero diseñado para usarse en Bootstrap 3",
+  "license": "GPLv3",
+  "author": "Alfredo Barron",
+  "homepage": "https://github.com/alfredobarron/smoke",
+  "keywords": [
+    "html",
+    "css",
+    "js",
+    "JavaScript",
+    "JQuery",
+    "plugin",
+    "bootstrap",
+    "front-end",
+    "web"
+  ],
   "main": "index.js",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "Gruntfile.js",
+    "bower.json",
+    "package.json"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,12 +32,9 @@
     "type": "git",
     "url": "https://github.com/alfredobarron/smoke.git"
   },
-  "author": "Alfredo Barron",
-  "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/alfredobarron/smoke/issues"
   },
-  "homepage": "https://github.com/alfredobarron/smoke",
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
