--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "smoke",
   "version": "2.1.3",
-  "description": "Smoke es el Plugin Jquery mas completo y ligero diseñado para usarse en Bootstrap 3",
+  "description": "Smoke is the most complete jQuery Plugin and designed for use with Bootstrap 3",
   "license": "GPLv3",
   "authors": [
     "Alfredo Barron <alfredobarronc@gmail.com>"
