--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smoke",
-  "version": "2.2.3",
+  "name": "smokejs",
+  "version": "2.2.4",
   "description": "Smoke is the most complete jQuery Plugin and designed for use with Bootstrap 3",
   "license": "LGPL",
   "author": "Alfredo Barron",
